# mcp-ckan-examplepythontools

./: README.md  pyproject.toml
src/mcp_ckan_examplepythontools/: __init__.py  localtools.py
